# tau-testnet

./: .dockerignore  .gitignore  Dockerfile.standalone  LICENSE.md  NOTICE.txt  README.md  WALLET_USAGE.md  api_response.py  block.py  chain_state.py  check_rules_hashes.py  config.py  db.py  docker-compose.standalone.yml  errors.py  gen.py  genesis.tau  genesis_consensus.tau  inspect_swarm.py  pyproject.toml  pytest.ini  requirements.txt  sbf_defs.py  server.py  tau_compile_worker.py  tau_defs.py  tau_io_logger.py  tau_logging.py  tau_manager.py  tau_native.py  tau_shrink.py  test_sendtx.py  tool_code.tau  utils.py  wallet.py  watchdog.py
android/: .gitignore  build.gradle  local.properties  settings.gradle
app/: __init__.py  container.py
commands/: __init__.py  createblock.py  getaccountstate.py  getallaccounts.py  getbalance.py  getblocks.py  getgovernance.py  getmempool.py  getsequence.py  gettaustate.py  gettimestamp.py  gettxstatus.py  getupdateid.py  history.py  sendtx.py  sendtx_new.py
consensus/: __init__.py  admission.py  engine.py  facade.py  fees.py  governance.py  serialization.py  state.py
demo/: .gitignore  checkpoint.sh  docker-compose.yml  render_revision.py  setup.sh  stake_consensus_revision.tau.tmpl
docker/: entrypoint.sh
docs/: CONSENSUS_ARCHITECTURE.md  demo_stake_switch.md  developer_cli.md  packaging.md
libp2p/: __init__.py
miner/: __init__.py  service.py
network/: __init__.py  bus.py  config.py  dht_manager.py  discovery.py  gossip.py  host.py  identity.py  libp2p_compat.py  protocols.py  service.py
poa/: __init__.py  engine.py  mempool.py  state.py  tau_engine.py
py_ecc_stub/: __init__.py  bls.py
rules/: 01_handle_insufficient_funds.tau  02_handle_src_eq_dest.tau  03_handle_zero_amount.tau  04_handle_valid_transfer.tau  _01_handle_insufficient_funds.tau  _02_handle_src_eq_dest.tau  _03_handle_zero_amount.tau  _04_handle_valid_transfer.tau  _05_handle_invalid_input.tau
scripts/: demo_governance.py  demo_stake_switch.py  demo_transfers.sh  gen_genesis.py  generate_miner_keys.py  package_smoke_test.sh  print_peer_id.py  run_standalone_node.sh  verify_server.py
tau_testnet_cli/: __init__.py  __main__.py  cli.py  docker.py  formatting.py  keys.py  rpc.py  tx.py
tests/: conftest.py  test_account_persistence_determinism.py  test_api_response_envelope.py  test_audit_fixes.py  test_block.py  test_block_timestamp_validation.py  test_chain_dht_integration.py  (+87 more)
(+23 files in other folders)
