[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tau-testnet"
version = "0.1.0"
description = "Tau Testnet developer CLI and node packaging"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
    { name = "IDNI" },
]
keywords = ["blockchain", "tau", "tau-lang", "consensus", "p2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "attrs==25.3.0",
    "base58==1.0.3",
    "blake3==0.4.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "libp2p==0.6.0",
    "multiaddr==0.0.11",
    "PyNaCl==1.6.1",
    "netaddr==1.3.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "protobuf>=6.33.4",
    "Pygments==2.19.2",
    "py-ecc==8.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.30.0",
    "trio_asyncio==0.15.0",
    "varint==1.0.2",
]

[project.optional-dependencies]
test = [
    "hypothesis==6.140.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-trio==0.8.0",
]

[project.scripts]
tau-testnet = "tau_testnet_cli.cli:main"

[project.urls]
Homepage = "https://github.com/IDNI/tau-testnet"
Source = "https://github.com/IDNI/tau-testnet"
Issues = "https://github.com/IDNI/tau-testnet/issues"

[tool.setuptools]
# Existing top-level modules must remain importable. Enumerate them
# explicitly because flat-layout autodiscovery does not handle the
# combination of root-level modules + nested packages cleanly.
py-modules = [
    "api_response",
    "block",
    "chain_state",
    "config",
    "db",
    "errors",
    "server",
    "tau_defs",
    "tau_io_logger",
    "tau_logging",
    "tau_manager",
    "tau_native",
    "utils",
    "wallet",
]

[tool.setuptools.packages.find]
include = [
    "tau_testnet_cli*",
    "app*",
    "commands*",
    "consensus*",
    "network*",
    "miner*",
]
exclude = [
    "tests*",
    "scripts*",
    "docs*",
    "android*",
    "web-wallet*",
    "rules*",
    "docker*",
]
